--- a/index.html
+++ b/index.html
@@ -8,7 +8,35 @@
     <title>Campo Minato</title>
 </head>
 <body>
-   
+    <!-- Header -->
+   <header>
+      <div class="left">
+           <div class="logo">
+                <img src="./assets/img/mobile-logo.png" alt="">
+           </div>
+          <h1>Campo Minato</h1>
+      </div>
+      <div class="right">
+        <span>Difficoltà:</span>
+        <select name="" id="">
+            <option value="">Easy</option>
+            <option value="">Medium</option>
+            <option value="">Hard</option>
+        </select>
+        <button id="btn">Play</button>
+      </div>
+
+   </header>
+
+   <!-- Main -->
+   <main>
+    <div class="container">
+        
+    </div>
+   </main>
+
+   <!-- Footer -->
+   <footer></footer>
 
     <script src="./assets/js/main.js"></script>
 </body>
