--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       <div class="right">
         <span>Difficoltà:</span>
         <select name="" id="">
-            <option value="">Easy</option>
-            <option value="">Medium</option>
-            <option value="">Hard</option>
+            <option value="0">Easy</option>
+            <option value="1">Medium</option>
+            <option value="2">Hard</option>
         </select>
         <button id="btn">Play</button>
       </div>
@@ -31,7 +31,6 @@
    <!-- Main -->
    <main>
     <div class="container">
-        
     </div>
    </main>
 
