--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       <div class="right">
         <span>Difficoltà:</span>
         <select name="" id="">
-            <option value="0">Easy</option>
-            <option value="1">Medium</option>
-            <option value="2">Hard</option>
+            <option value="100">Easy</option>
+            <option value="81">Medium</option>
+            <option value="49">Hard</option>
         </select>
         <button id="btn">Play</button>
       </div>
@@ -35,7 +35,9 @@
    </main>
 
    <!-- Footer -->
-   <footer></footer>
+   <footer>
+    <p>Made width &hearts; by <a href="#">Boolean</a></p>
+   </footer>
 
     <script src="./assets/js/main.js"></script>
 </body>
