--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
    <!-- Footer -->
    <footer>
-    <p>Made width &hearts; by <a href="#">Boolean</a></p>
+    <p>Made with &hearts; by <a href="#">Boolean</a></p>
    </footer>
 
     <script src="./assets/js/main.js"></script>
